[package]
name = "ferrisbox"
version = "0.2.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "sync", "macros"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
tracing = "0.1.44"
